--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Quantizero
 description: My blog :)
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: /images/quant.png
 
 #
 # Flags below are optional
